--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,9 @@
 # Starter pipeline
+- task: CmdLine@2
+  inputs:
+    script: 'echo Write your commands here
+      
+      echo Use the environment variables input below to pass secret variables to this script'
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
